[tool.poetry]
name = "LaunchEditor"
version = "0.1.0"
description = ""
authors = ["Thiago F. G. Albuquerque <thiagofga@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
mock = "3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
