[tool.poetry]
name = "LaunchEditor"
version = "0.1.0"
description = ""
authors = ["Thiago F. G. Albuquerque <thiagofga@gmail.com>"]

packages = [

    { include = "LaunchEditor", from = "src" },
]


[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mock = "3.0.5"
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
